zwave/Jasco/ZW3005/14321 - In-Wall Smart Paddle Dimmer/5.23/README.md
# DISCLAIMER:
The software is provided "as is" to provide our customers the ability to update our products. Jasco does not offer any express or implied warranty of any kind when using these files, including, but not limited to, warranties of merchantability, noninfringement, or fitness for a particular purpose.<br>
<br>
Jasco does not imply or guarantee that the software provided will meet your requirements or that the operation thereof will be uninterrupted or error-free, or that all errors will be corrected. Jasco does not assume any responsibility for product errors related to the use of the software contained within this repository. Jasco does not offer support on flashing firmware to the devices listed here and are only provided as a courtesy to our customers and the community.

## CONTENTS:
ZW3005_Jasco_14321_5.23.hex

## Z-WAVE DEVKIT VERSION:
6.51.08

## RELEASE NOTES:
v5.23: SECOND RELEASE FOR MODEL 14321

## DATE CODES INSTALLED ON:
1648 THROUGH 1704

## CHANGELOG:
1. Dimming fix (bKeep) is added for LED light bulb flickering improvement